[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/PauseScreen.gd" type="Script" id=1]

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="ScreenDarkenRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="pauseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="pauseTimer" to="." method="_on_pauseTimer_timeout"]
